# torch_agents

./: .gitignore  README.md  demos.py  setup.cfg  todo.txt
benchmarks/: sac_ant.py  sac_hopper.py  sac_humanoid.py
demos/sac/: sac_checkpoints.py  sac_minimal.py  sac_pendulum.py  sac_repeatable.py
docs/source/: conf.py  demos.rst  index.rst  modules.rst  torch_agents.agents.rst  torch_agents.rst
pytorch_sphinx_theme/pytorch_sphinx_theme/: footer.html  layout.html
torch_agents/: .gitignore  README.md  agents.py  demos.py  dynamic.py  environments.py  explore.py  memory.py  networks.py  schedule.py  sumtree.py  test_dynamic.py  test_schedule.py
torch_agents/agents/: agent.py  ddpg.py  dqn.py  ppo.py  sac.py
