[metadata]
name = torch_agents
version = 0.0.1

description = Easy Deep Reinforcement Learning for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leereeves/torch_agents
project_urls =
    Bug Tracker = https://github.com/leereeves/torch_agents/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = torch_agents
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
